--- a/styles.css
+++ b/styles.css
@@ -654,7 +654,7 @@ font-family: 'Lato';
 
 .nataraja-section .title2 {
     order: 1;
-    margin-top: 0;
+    margin-top: 0px;
     margin-bottom: 30px;
     font-size: 4rem;
     text-align: center;
@@ -666,7 +666,7 @@ font-family:'Lato';
 .nataraja-section .nataraja-icon {
     order: 2;
     display: block;
-    max-width: 500px;
+    max-width: 200px;
     height: auto;
     margin: 0 auto;
 }
@@ -790,7 +790,7 @@ font-family:'Lato';
 .carousel-track {
  display: flex;
  width: 100%;
- height: 100%
+ height: 100%;
  align-items: center;
  animation: slideImages 25s infinite;
 }
