--- a/styles.css
+++ b/styles.css
@@ -627,6 +627,7 @@ font-family: 'Lato';
     .sisters-image {
         max-width: 100%;
         text-align: center;
+        align-items: center;
     }
 
     .sisters-image img {
@@ -648,7 +649,7 @@ font-family: 'Lato';
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 300px;
     margin: 40px auto;
 }
 
@@ -1221,7 +1222,7 @@ font-family: 'Lato';
 }
 
 .faq-item.open .faq-answer {
-  max-height: 500px;
+  max-height: 700px;
   padding: 20px;
 }
 
@@ -1647,8 +1648,12 @@ font-family: 'Lato';
 }
 
 .top-textbox .logo img {
-  height: clamp(40px, 8vw, 80px);
+  height: clamp(30px, 7vw, 70px);
   width: auto;
+}
+
+.logo img {
+  margin-right: clamp(3px, 1vw, 10px);
 }
 
 
